Changes in UNIFAC example

--- a/examples/UNIFAC/Makefile
+++ b/examples/UNIFAC/Makefile
@@ -14,20 +14,27 @@ clean:
 	rm -f unifac
 	rm -f preunifac
 
-unifac: $(OBJDIR)/unifac.o
-	$(FORT) $(FOPTS) -J$(OBJDIR) -o $@ $< $(LIBS)
+unifac: $(OBJDIR)/unifac.o  $(OBJDIR)/scilab_style.o  $(OBJDIR)/mString.o
+	$(FORT) $(FOPTS) -J$(OBJDIR) -o $@ $^ $(LIBS)
 
-$(OBJDIR)/unifac.o: $(SRCDIR)/unifac.f90 $(OBJDIR)/mTypes.o
+$(OBJDIR)/unifac.o: $(SRCDIR)/unifac.f90 $(OBJDIR)/scilab_style.o $(OBJDIR)/mTypes.o
 	$(FORT) $(FOPTS) -J$(OBJDIR) -c -I$(FORTRIX)/include -o $@ $<
 
 $(OBJDIR)/mTypes.o: $(SRCDIR)/mTypes.f90
 	mkdir -p $(OBJDIR)
 	$(FORT) $(FOPTS) -J$(OBJDIR) -c -o $@ $<
 
-preunifac: $(OBJDIR)/preunifac.o
-	$(FORT) $(FOPTS) -J$(OBJDIR) -o $@ $<
+preunifac: $(OBJDIR)/preunifac.o $(OBJDIR)/scilab_style.o $(OBJDIR)/mString.o
+	$(FORT) $(FOPTS) -J$(OBJDIR) -o $@ $^
 
-$(OBJDIR)/preunifac.o: $(SRCDIR)/preunifac.f90
-	mkdir -p $(OBJDIR)
+$(OBJDIR)/preunifac.o: $(SRCDIR)/preunifac.f90 $(OBJDIR)/scilab_style.o
 	$(FORT) $(FOPTS) -I$(OBJDIR) -c -o $@ $<
+
+$(OBJDIR)/scilab_style.o: $(SRCDIR)/scilab_style.f90 $(OBJDIR)/mString.o
+	$(FORT) $(FOPTS) -J$(OBJDIR) -c -o $@ $<
+
+$(OBJDIR)/mString.o: $(SRCDIR)/mString.f90
+	mkdir -p $(OBJDIR)
+	$(FORT) $(FOPTS) -J$(OBJDIR) -c -o $@ $<
+
 
